--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#share-head-section">Share</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Contact-Us">Contact Us</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -261,7 +264,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="Contact-Us">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 py-5 text-center">
